--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "react-icons": "^5.4.0",
     "echarts": "^5.5.0",
     "echarts-for-react": "^3.0.2",
-    "date-fns": "4.1.0"
+    "date-fns": "4.1.0",
+    "@stripe/stripe-js": "^2.4.0",
+    "@stripe/react-stripe-js": "^2.4.0",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
