--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,27 @@
-# Stripe Configuration
+# Frontend Configuration
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 VITE_API_URL=http://localhost:3001/api
 
-# Add your actual Stripe publishable key to .env file
+# Backend Configuration
+PORT=3001
+NODE_ENV=development
+FRONTEND_URL=http://localhost:5173
+
+# Database Configuration (for future use)
+DATABASE_URL=postgresql://username:password@localhost:5432/gympay
+
+# Stripe Configuration (for backend)
+STRIPE_SECRET_KEY=sk_test_your_secret_key_here
+STRIPE_WEBHOOK_SECRET=whsec_your_webhook_secret_here
+
+# JWT Configuration (for future authentication)
+JWT_SECRET=your_jwt_secret_here
+JWT_EXPIRES_IN=7d
+
+# Email Configuration (for future notifications)
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=your_email@gmail.com
+SMTP_PASS=your_app_password
+
+# Add your actual values to .env file (not tracked by git)
