--- a/.env.example
+++ b/.env.example
@@ -1,14 +1,17 @@
 # Frontend Configuration
 VITE_STRIPE_PUBLISHABLE_KEY=pk_test_your_publishable_key_here
 VITE_API_URL=http://localhost:3001/api
+VITE_SUPABASE_URL=https://your-project.supabase.co
+VITE_SUPABASE_ANON_KEY=your_supabase_anon_key_here
 
 # Backend Configuration
 PORT=3001
 NODE_ENV=development
 FRONTEND_URL=http://localhost:5173
 
-# Database Configuration (for future use)
-DATABASE_URL=postgresql://username:password@localhost:5432/gympay
+# Supabase Configuration (for backend)
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
 
 # Stripe Configuration (for backend)
 STRIPE_SECRET_KEY=sk_test_your_secret_key_here
